--- a/RG.html
+++ b/RG.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Flatfy Free Flat and Responsive HTML5 Template ">
     <meta name="author" content="">
 
-    <title>RETAIL MAGNET</title>
+    <title>Element</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -162,7 +162,7 @@
       <div class="container" style="background-color:#34495e">
         <div class="row" >
          <div class="col-md-12" >
-              <span style="text-align:center;margin-left:32%">2017 © Mountain Movers. ALL Rights Reserved - 17-076</span>
+              <span style="text-align:center;margin-left:32%">2018 © Team Dynamic. ALL Rights Reserved - 18-025</span>
             </div>
           </div>
         </div>
