--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<span class="icon-bar"></span>
 				</button>
                 
-				<a class="navbar-brand" href="#home"><img src ="img/logos.png" style="height: 100px;margin-top: -35px;"></a>
+				<a class="navbar-brand" href="#home"><img src ="img/logos.png" style="height: 60px;margin-top: -18px;"></a>
 			</div>
 
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
@@ -148,11 +148,11 @@
 			<div class="row">
 			
 				<div class="col-sm-12 wow fadeInDown text-center">
-				  <img class="rotate" src="img/logos.png" alt="Generic placeholder image" style="height:300px">
+				  <img class="rotate" src="img/logos.png" alt="Generic placeholder image" style="height:200px">
 				  <h3>ELEMENT</h3>
                     <p class="lead">Contemplating the fact that business enterprises
 											globally, benefit from social media to gain profits, this research
-											paper discusses a tool incorporated with analyzing mechanisms
+											discusses a tool incorporated with analyzing mechanisms
 											of customer responses on social media to maximize the gained
 											profit and take befitting future decisions. The tool analyses the
 											feedback received on social media posts in the forms of reactions,
@@ -526,8 +526,8 @@
 				  <img  class="" src="img/icon/Rushan.png" alt="Generic placeholder image" style="height:180px">
 				   <h4>Rushan Silva</h4>
                     <div class="tb-socio">
-            <a onmouseover='this.style="color:#3b5998"' onmouseout='this.style="none"' href="https://www.facebook.com/sahanjith93" class="fa fa-facebook"></a>
-            <a onmouseover='this.style="color:#0077B5"' onmouseout='this.style="none"' href="https://lk.linkedin.com/in/sahan-weerakkody-351323120" class="fa fa-linkedin"></a>
+            <a onmouseover='this.style="color:#3b5998"' onmouseout='this.style="none"' href="https://www.facebook.com/rushan.silva.9" class="fa fa-facebook"></a>
+            <a onmouseover='this.style="color:#0077B5"' onmouseout='this.style="none"' href="https://www.linkedin.com/in/rushan-silva-bab21510b/" class="fa fa-linkedin"></a>
             <a onmouseover='this.style="color:#d34836"' onmouseout='this.style="none"' href="javascript:void(0);" class="fa fa-google-plus"></a>
           </div>
                     <p class="lead">
@@ -547,8 +547,8 @@
 				  <img  class="" src="img/icon/Dimuthu.png" alt="Generic placeholder image"  style="height:180px">
 				   <h4>Dimuthu Viduranga</h4>
                     <div class="tb-socio">
-            <a onmouseover='this.style="color:#3b5998"' onmouseout='this.style="none"' href="https://www.facebook.com/Bhanuka.Samarasinghe" class="fa fa-facebook"></a>
-            <a onmouseover='this.style="color:#0077B5"' onmouseout='this.style="none"' href="https://lk.linkedin.com/pub/bhanuka-samarasinghe/106/2b/248" class="fa fa-linkedin"></a>
+            <a onmouseover='this.style="color:#3b5998"' onmouseout='this.style="none"' href="https://www.facebook.com/viduranga007" class="fa fa-facebook"></a>
+            <a onmouseover='this.style="color:#0077B5"' onmouseout='this.style="none"' href="https://lk.linkedin.com" class="fa fa-linkedin"></a>
             <a onmouseover='this.style="color:#d34836"' onmouseout='this.style="none"' href="javascript:void(0);" class="fa fa-google-plus"></a>
           </div>
                     <p class="lead">
@@ -567,8 +567,8 @@
 				  <img  class="" src="img/icon/Hiruni.png" alt="Generic placeholder image"  style="height:180px">
 				   <h4>Hiruni Mirando</h4>
                     <div class="tb-socio">
-            <a onmouseover='this.style="color:#3b5998"' onmouseout='this.style="none"' href="https://www.facebook.com/umrah.zaini" class="fa fa-facebook"></a>
-            <a onmouseover='this.style="color:#0077B5"' onmouseout='this.style="none"' href="https://lk.linkedin.com/in/umrah-musaffer-2b56a7109" class="fa fa-linkedin"></a>
+            <a onmouseover='this.style="color:#3b5998"' onmouseout='this.style="none"' href="https://www.facebook.com/hirunim2" class="fa fa-facebook"></a>
+            <a onmouseover='this.style="color:#0077B5"' onmouseout='this.style="none"' href="https://lk.linkedin.com" class="fa fa-linkedin"></a>
             <a onmouseover='this.style="color:#d34836"' onmouseout='this.style="none"' href="javascript:void(0);" class="fa fa-google-plus"></a>
           </div>
                     <p class="lead">
@@ -588,8 +588,8 @@
 				  <img  class="" src="img/icon/Kushali.png" alt="Generic placeholder image"  style="height:180px">
 				   <h4>Kushali Withanage</h4>
                     <div class="tb-socio">
-            <a onmouseover='this.style="color:#3b5998"' onmouseout='this.style="none"' href="https://www.facebook.com/sarasi.sumathipala" class="fa fa-facebook"></a>
-            <a onmouseover='this.style="color:#0077B5"' onmouseout='this.style="none"' href="https://www.linkedin.com/in/sarasi-sumathipala-2264b990/" class="fa fa-linkedin"></a>
+            <a onmouseover='this.style="color:#3b5998"' onmouseout='this.style="none"' href="https://www.facebook.com/profile.php?id=100008512321881" class="fa fa-facebook"></a>
+            <a onmouseover='this.style="color:#0077B5"' onmouseout='this.style="none"' href="https://www.linkedin.com" class="fa fa-linkedin"></a>
             <a onmouseover='this.style="color:#d34836"' onmouseout='this.style="none"' href="javascript:void(0);" class="fa fa-google-plus"></a>
           </div>
                     <p class="lead">
@@ -676,7 +676,7 @@
       <div class="container" style="background-color:#34495e">
         <div class="row" >
           <div class="col-md-12" >
-              <span style="text-align:center;margin-left:33%">2017 © Mountain Movers. All Rights Reserved - 17-076</span>
+              <span style="text-align:center;margin-left:33%">2018 © Team Dynamic. All Rights Reserved - 18-025</span>
             </div>
           </div>
         </div>
